[gd_scene load_steps=15 format=3 uid="uid://dsa5uq3gc7i63"]

[ext_resource type="Script" path="res://scripts/knight1.gd" id="1_4gsqr"]
[ext_resource type="Texture2D" uid="uid://dd1ax8o85p0h0" path="res://images/Knight_walk_1.png" id="2_6lxtc"]
[ext_resource type="Texture2D" uid="uid://dffp72qjdxgwx" path="res://images/Knight_strike_1.png" id="3_5bjkw"]
[ext_resource type="Texture2D" uid="uid://epeti2feubp4" path="res://images/Knight_walk_2.png" id="3_67krl"]
[ext_resource type="Script" path="res://scripts/enemyHealthBar.gd" id="3_iikv0"]
[ext_resource type="Texture2D" uid="uid://bipavfgceydxm" path="res://images/Knight_strike_2.png" id="4_ur6ta"]

[sub_resource type="Animation" id="Animation_ulfge"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:current_state")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [{
"ADVANCE": 1,
"IDLE": 0,
"STANDING_ATTACK": 2
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitbox:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BattleRange:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BattleRange:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprite2D:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [ExtResource("2_6lxtc")]
}

[sub_resource type="Animation" id="Animation_jk2ok"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:current_state")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SwordHitbox:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BattleRange:collision_mask")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BattleRange:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Sprite2D:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_5bjkw"), ExtResource("4_ur6ta")]
}

[sub_resource type="Animation" id="Animation_4o5jg"]
resource_name = "walk"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SwordHitbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SwordHitbox:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_6lxtc"), ExtResource("3_67krl"), ExtResource("2_6lxtc"), ExtResource("3_67krl")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x0tqq"]
_data = {
"RESET": SubResource("Animation_ulfge"),
"attack": SubResource("Animation_jk2ok"),
"walk": SubResource("Animation_4o5jg")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtmxk"]
size = Vector2(49, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljb63"]
size = Vector2(30, 60)

[sub_resource type="CircleShape2D" id="CircleShape2D_t4we4"]
radius = 53.0848

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ucci8"]
bg_color = Color(0.87451, 0, 0, 1)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_4gsqr")
current_state = {
"ADVANCE": 1,
"IDLE": 0,
"STANDING_ATTACK": 2
}

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.105, 0.105)
texture = ExtResource("2_6lxtc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x0tqq")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wtmxk")

[node name="SwordHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordHitbox"]
position = Vector2(40, 0)
shape = SubResource("RectangleShape2D_ljb63")
debug_color = Color(0.972549, 0.145098, 0.180392, 0.419608)

[node name="BattleRange" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="BattleRange"]
shape = SubResource("CircleShape2D_t4we4")

[node name="ProgressBar" type="ProgressBar" parent="." node_paths=PackedStringArray("mainMan")]
offset_left = -66.0
offset_top = -73.0
offset_right = 67.0
offset_bottom = -46.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ucci8")
show_percentage = false
script = ExtResource("3_iikv0")
mainMan = NodePath("..")

[connection signal="body_entered" from="SwordHitbox" to="." method="_on_sword_hitbox_body_entered"]
[connection signal="body_entered" from="BattleRange" to="." method="_on_battle_range_body_entered"]
